Add presign url cover uplaoad
